2009-10-05  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: Store the starting_generation and only_unemitted
	  flags on the EmitContext so that the values are used when we
	  call DoEmitCurrentContext from managed code. r: toshok

2009-09-28  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: ComboBox.ItemContainerStyle and
	  ListBox.ItemContainerStyle both should update the container
	  item Style value when they change. r: spouliot

2009-09-23  Chris Toshok  <toshok@ximian.com>

	* Popup.cs: simplify this a bunch.  remove autogenerated events,
	and use a similar pattern as Events.cs for the OnOpened handler,
	which we register with the new Events.AddOnEventHandler method.
	(OnOpened): Call
	NativeMethods.event_object_do_emit_current_context from that
	method

	r: spouliot, andriea

2009-09-17  Jeffrey Stedfast  <fejj@novell.com>

	* Popup.cs: Removed unused variable.

	r:kangaroo

2009-09-10  Jackson Harper  <jackson@ximian.com>

	* Selector.cs: Add the SetAttributeDelayed attribute to the
	selected index property. This allows you to add children to a
	selector and set its initial selected index in xaml.

	r: spouliot

2009-09-04  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: If a ListBoxItem with IsSelected = true is
	  added to a Selector, that value is respected and
	  SelectedItem/Index is updated. r: sde

2009-09-03  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Remove code duplication - DisplayMemberPath
	  handling should only exist in ItemsControl. This fixes
	  DisplayMemberPath handling for ListBox too. r: sde

2009-09-02  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Only clear the selected item if its visual
	  container exists. If the visual container does *not* exist
	  then the container is just being created as part of
	  PrepareContainerForItemOverride in ComboBox so we can get
	  the correct ItemTemplate. r: toshok

2009-08-28  Alan McGovern  <amcgovern@novell.com>
