@@ -1,26 +1,38 @@
 
+using System.Collections.Specialized;
 
 namespace System.Windows.Controls.Primitives {
 
 	
 	public class ItemsChangedEventArgs : EventArgs {
 
-		// public NotifyCollectionChangedAction Action { get; }
+		private NotifyCollectionChangedAction action;
+
+		private int item_count;
+		private int item_ui_count;
+
+		private GeneratorPosition position;
+		private GeneratorPosition old_position;
+		
+
+		public NotifyCollectionChangedAction Action {
+			get { return action; }
+		}
 
 		public int ItemCount {
-			get { return 0; }
+			get { return item_count; }
 		}
 
 		public int ItemUICount {
-			get { return 0; }
+			get { return item_ui_count; }
 		}
 
 		public GeneratorPosition OldPosition {
-			get { return new GeneratorPosition (); }
+			get { return old_position; }
 		}
 
 		public GeneratorPosition Position {
-			get { return new GeneratorPosition (); }
+			get { return position; }
 		}
 	}
 }
