@@ -1,3 +1,7 @@
+2009-11-23  Jackson Harper  <jackson@ximian.com>
+
+	* ItemsChangedEventArgs.cs: Flesh out this stub a little bit more.
+
 2009-10-05  Alan McGovern  <amcgovern@novell.com>
 
 	* Popup.cs: Store the starting_generation and only_unemitted
